--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -5,14 +5,15 @@
   background-color: rgb(37, 37, 39);
 }
 .contact__container {
-  max-width: 500px;
+  max-width: 550px;
   width: 95%;
   display: flex;
   justify-content: center;
-  padding: 2rem;
+  padding: 1rem 1rem;
 }
 .contact__h1 {
   color: white;
+  padding-left: 1rem;
 }
 .contact__info {
   padding: 1rem;
@@ -46,4 +47,39 @@
   padding: 0.5rem;
   border: none;
   border-radius: 4px;
+  outline: none;
+  background-color: rgb(23, 194, 180);
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.contact__info > button:hover {
+  transition: all 0.2s;
+  background-color: rgb(59, 228, 214);
+}
+.contact__containerinfo {
+  display: flex;
+  flex-direction: column;
+}
+.contact__title {
+  margin-bottom: 2rem;
+}
+.contact__title > h1 {
+  color: white;
+  margin-bottom: 2rem;
+}
+.contact__info2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+.contact__info2 > h3 {
+  color: white;
+}
+.contact__adress {
+  margin-left: 1rem;
+}
+.contact__adress > p {
+  color: white;
 }
