--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,13 +2,36 @@
   margin-top: 3rem;
 }
 .about__container {
-  padding: 2rem;
+  padding: 1rem;
   max-width: 1000px;
-  width: 95%;
+  width: 85%;
   margin: 0 auto;
+  border-top: 1px solid lightgray;
+}
+@media (min-width: 768px) {
+  .about__container {
+    padding: 2rem;
+    max-width: 1000px;
+    width: 95%;
+    margin: 0 auto;
+    border-top: 1px solid lightgray;
+  }
 }
 .about__info {
   display: flex;
+  flex-direction: column;
+}
+#aboutsecond {
+  flex-direction: column-reverse;
+}
+@media (min-width: 768px) {
+  .about__info {
+    display: flex;
+    flex-direction: row;
+  }
+  #aboutsecond {
+    flex-direction: row;
+  }
 }
 .about__title {
   flex: 0.5;
@@ -28,7 +51,7 @@
   justify-content: center;
   margin-bottom: 2rem;
   font-size: 1.5rem;
-  color: rgb(71, 151, 210);
+  color: rgb(23, 194, 180);
 }
 .about__p {
   color: gray;
