--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,8 +1,17 @@
 .contact {
   display: flex;
-  justify-content: flex-start;
-  margin-top: 1rem;
+  justify-content: space-between;
+  margin-top: 0rem;
   background-color: rgb(37, 37, 39);
+}
+#contactInfo {
+  display: none;
+}
+@media (min-width: 768px) {
+  #contactInfo {
+    display: block;
+    display: flex;
+  }
 }
 .contact__container {
   max-width: 550px;
@@ -32,6 +41,7 @@
   color: gray;
   font-size: 1.1rem;
   font-weight: normal;
+  outline: none;
 }
 .contact__info > textarea {
   width: 22rem;
@@ -42,6 +52,7 @@
   color: gray;
   font-size: 1.1rem;
   font-weight: normal;
+  outline: none;
 }
 .contact__info > button {
   padding: 0.5rem;
@@ -82,4 +93,16 @@
 }
 .contact__adress > p {
   color: white;
+}
+.contact__divenviando {
+  padding: 1.2rem;
+  display: flex;
+  justify-content: center;
+}
+.contact__enviando {
+  background-color: rgb(76, 150, 215);
+  color: white;
+  padding: 1rem 5rem;
+  border-radius: 4px;
+  font-size: 1.1rem;
 }
