--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,20 +4,41 @@
   position: sticky;
   top: 0%;
   z-index: 999;
-  border: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  border-top: 1px solid lightgray;
+}
+.headeridtrans {
+  transition: ease-in-out 0.4s;
+  background-color: rgb(37, 37, 39);
+  border-bottom: 1px solid rgb(121, 121, 121);
 }
 .header__container {
-  max-width: 1200px;
-  width: 95%;
-  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
 }
-.header__logo > img {
-  height: 5rem;
-  object-fit: contain;
-  cursor: pointer;
+@media (min-width: 768px) {
+  .header__container {
+    max-width: 1200px;
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.header__logo {
+  display: none;
+}
+@media (min-width: 768px) {
+  .header__logo {
+    display: block;
+  }
+  .header__logo > img {
+    height: 5rem;
+    object-fit: contain;
+    cursor: pointer;
+  }
 }
 .header__navbar {
   display: flex;
@@ -26,11 +47,16 @@
   padding-left: 1.2rem;
 }
 .header__input {
-  position: relative;
-  width: 20%;
+  display: none;
+}
+@media (min-width: 768px) {
+  .header__input {
+    position: relative;
+    display: block;
+  }
 }
 .header__input > input {
-  max-width: 14rem;
+  min-width: 10rem;
   width: 95%;
   padding: 0.4rem;
   border: none;
@@ -40,7 +66,7 @@
 }
 .header__input > .MuiSvgIcon-root {
   position: absolute;
-  left: 13rem;
+  left: 9rem;
   top: 0.1rem;
   color: gray;
   cursor: pointer;
