--- a/src/components/Subheader.css
+++ b/src/components/Subheader.css
@@ -1,9 +1,14 @@
 .subheader {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgb(239, 241, 250);
-  padding: 0.5rem;
+  display: none;
+}
+@media (min-width: 768px) {
+  .subheader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(239, 241, 250);
+    padding: 0.5rem;
+  }
 }
 .subheader__phono {
   display: flex;
