--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,14 +10,27 @@
 }
 .footer__iconarrow > .MuiSvgIcon-root {
   position: absolute;
-  top: -2rem;
-  width: 4rem;
-  height: 4rem;
+  top: -1.5rem;
+  width: 3rem;
+  height: 3rem;
   color: white;
   background-color: rgb(23, 194, 180);
   border-radius: 50px;
   cursor: pointer;
 }
+@media (min-width: 768px) {
+  .footer__iconarrow > .MuiSvgIcon-root {
+    position: absolute;
+    top: -2rem;
+    width: 4rem;
+    height: 4rem;
+    color: white;
+    background-color: rgb(23, 194, 180);
+    border-radius: 50px;
+    cursor: pointer;
+  }
+}
+
 .footer__iconarrow > .MuiSvgIcon-root:hover {
   transition: all 0.2s;
   background-color: rgb(65, 231, 217);
