--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,28 @@
+.navbar {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem 0rem;
+  justify-content: center;
+  background-color: rgb(67, 67, 68);
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+@media (min-width: 768px) {
+  .navbar {
+    display: flex;
+    align-items: center;
+    padding: 2rem 0rem;
+    flex-direction: row;
+    justify-content: center;
+    background-color: rgb(67, 67, 68);
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+}
 .navbar__link {
   padding: 0.5rem;
+  text-align: center;
   color: rgb(23, 194, 180);
   font-size: 1.1rem;
   cursor: pointer;
