--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -8,8 +8,73 @@
 }
 .home__image {
   height: 100%;
+  position: relative;
 }
 .home__img {
   height: 100%;
   object-fit: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.banner__info {
+  position: absolute;
+  background-color: rgba(41, 49, 119, 0.219);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+}
+.banner__pbutton {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.banner__pbutton > h3 {
+  color: white;
+  text-align: center;
+}
+.banner__pbutton > button {
+  display: none;
+}
+@media (min-width: 768px) {
+  .banner__pbutton {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .banner__pbutton > h3 {
+    color: white;
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .banner__pbutton > button {
+    padding: 0.6rem;
+    width: 12rem;
+    border: none;
+    border-radius: 4px;
+    margin-top: 4rem;
+    background-color: rgb(23, 194, 180);
+    color: white;
+    text-transform: uppercase;
+    font-weight: 800;
+    cursor: pointer;
+    border: 1px solid transparent;
+    font-size: 1rem;
+    outline: none;
+    display: block;
+  }
+  .banner__pbutton > button:hover {
+    transition: all 0.3s;
+    background-color: rgb(62, 209, 197);
+  }
 }
