--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,116 +1,134 @@
 .services {
-  margin-top: 1rem;
-  padding: 0.5px;
-}
-.services__title {
   display: flex;
-  justify-content: center;
-  margin-bottom: 2rem;
+  flex-direction: column;
 }
-.services__title > h1 {
+.services > h1 {
+  text-align: center;
+  margin-bottom: 0rem;
+  display: flex;
+  flex-direction: column;
   color: rgb(23, 194, 180);
 }
 .services__container {
   max-width: 1000px;
-  width: 85%;
+  width: 90%;
   margin: 0 auto;
-  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  justify-content: center;
   border-top: 1px solid lightgray;
-  padding: 1rem;
-  border-radius: 5px;
 }
 @media (min-width: 768px) {
   .services__container {
     max-width: 1000px;
     width: 95%;
     margin: 0 auto;
-    margin-top: 2rem;
-    border-top: 1px solid lightgray;
-
-    padding: 1rem;
-    border-radius: 5px;
-  }
-}
-.services__firstcolumn {
-  display: flex;
-  flex-direction: column;
-}
-@media (min-width: 768px) {
-  .services__firstcolumn {
     display: flex;
     flex-direction: row;
+    margin-top: 4rem;
+    margin-bottom: 0rem;
+    justify-content: center;
+    border-top: 1px solid lightgray;
   }
 }
-.services__icon {
-  margin-bottom: 2rem;
+.services__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+  margin-top: 2rem;
 }
-.services__icon2 {
-  margin-bottom: 2rem;
-}
-.services__icon3 {
-  margin-bottom: 0rem;
+.services__info2 {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin-left: 0rem;
+  align-items: center;
+  flex: 1;
+  margin-top: 2rem;
 }
 @media (min-width: 768px) {
-  .services__icon {
-    margin-bottom: 0;
+  .services__info2 {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-left: 2rem;
+    align-items: center;
+    flex: 1;
+    margin-top: 2rem;
   }
-  .services__icon2 {
-    margin-bottom: 0rem;
+}
+.services__info1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  margin-left: 0rem;
+  flex: 1;
+  margin-top: 2rem;
+}
+@media (min-width: 768px) {
+  .services__info1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin-left: 2rem;
+    flex: 1;
+    margin-top: 2rem;
   }
-  .services__icon3 {
-    margin-bottom: 0rem;
-  }
+}
+.services__info2 > h3 {
+  margin-bottom: 1rem;
+  color: rgb(23, 194, 180);
+}
+.services__info1 > h3 {
+  margin-bottom: 1rem;
+  color: rgb(23, 194, 180);
+}
+.services__info2 > p {
+  text-align: justify;
+  color: gray;
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+}
+.services__info1 > p {
+  text-align: justify;
+  color: gray;
+  font-size: 1.1rem;
+}
+.services__info > h3 {
+  margin-bottom: 1rem;
+  color: rgb(23, 194, 180);
+}
+.services__info > p {
+  margin-bottom: 1rem;
+  text-align: justify;
+  color: gray;
+  font-size: 1.1rem;
+}
+.services__info > .MuiSvgIcon-root {
+  color: rgb(23, 194, 180);
+  width: 4rem;
+  height: 4rem;
 }
 .services__icon {
   display: flex;
-  flex-direction: column;
-  margin-right: 0.5rem;
-}
-.services__icon2 {
-  display: flex;
-  flex-direction: column;
-  margin-right: 1rem;
-}
-.services__icon > p {
-  color: gray;
-  font-size: 1.1rem;
-}
-.services__icon2 > p {
-  color: gray;
-  font-size: 1.1rem;
-}
-.services__icon3 > p {
-  color: gray;
-  font-size: 1.1rem;
-}
-.services__icon3 {
-  display: flex;
-  flex-direction: column;
-}
-.services__buildicon {
-  margin-top: 1rem;
-  display: flex;
+  align-items: center;
   justify-content: center;
 }
-.services__buildicon > .MuiSvgIcon-root {
-  height: 5rem;
-  width: 5rem;
-  color: rgb(23, 194, 180);
-  padding: 0.6rem;
 
-  border-radius: 50px;
-  background-color: white;
-}
-.services__buildicon > .MuiSvgIcon-root:hover {
-  transition: all 0.2s;
-  color: white;
-  padding: 0.6rem;
-  border-radius: 50px;
-  background-color: rgb(23, 194, 180);
-}
-.services__subtitle {
-  margin-bottom: 1rem;
-  display: flex;
-  justify-content: center;
+.services__icon > .MuiSvgIcon-root {
   color: rgb(23, 194, 180);
+  width: 5rem;
+  height: 5rem;
+  padding: 0.5rem;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.services__icon > .MuiSvgIcon-root:hover {
+  background-color: rgb(23, 194, 180);
+  color: white;
 }
