--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,6 +39,7 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .footer__copyright {
@@ -63,7 +64,8 @@
   padding: 1rem;
   justify-content: center;
   align-items: center;
-  color: gray;
+  color: rgb(226, 226, 226);
+  background-color: rgb(67, 67, 68);
 }
 .footer__subfooter > p {
   margin-right: 1rem;
